# nipanel-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  check_docs.yml  check_nipanel.yml  publish.yml  report_test_results.yml  run_unit_tests.yml
docs/: conf.py  index.rst
examples/: placeholder.py
examples/all_types/: README.md  all_types.py  all_types_panel.py  define_types.py
examples/hello/: README.md  hello.py  hello_panel.py
examples/nidaqmx/: README.md  nidaqmx_continuous_analog_input.py  nidaqmx_continuous_analog_input_panel.py  niscope_example.py  niscope_panel.py
examples/nidaqmx/nidaqmx_analog_input_fft/: README.md  nidaqmx_analog_input_fft.py  nidaqmx_analog_input_fft_panel.py
examples/nidaqmx/nidaqmx_analog_input_filtering/: README.md  nidaqmx_analog_input_filtering.py  nidaqmx_analog_input_filtering_panel.py
examples/nidaqmx/nidaqmx_analog_output_voltage/: README.md  nidaqmx_analog_output_voltage.py  nidaqmx_analog_output_voltage_panel.py
examples/nidaqmx/nidaqmx_continuous_analog_input/: README.md  nidaqmx_continuous_analog_input.py  nidaqmx_continuous_analog_input_panel.py
examples/nidaqmx_analog_input_filtering/: README.md  nidaqmx_analog_input_filtering.py  nidaqmx_analog_input_filtering_panel.py  settings_enum.py
examples/nidaqmx_continuous_analog_input/: README.md  nidaqmx_continuous_analog_input.py  nidaqmx_continuous_analog_input_panel.py
examples/nidaqmx_current/: nidaqmx_current.py  nidaqmx_current_panel.py
examples/niscope/: README.md  niscope_ex_fetch_forever.py  niscope_ex_fetch_forever_panel.py  niscope_example.py  niscope_panel.py
examples/niscope/nicope_ex_fetch_forever/: README.md
examples/niscope/niscope_binary_acquisition/: README.md  niscope_binary_acquisition.py  niscope_binary_acquisition_panel.py
examples/niscope/niscope_configured_acquisition/: README.md  niscope_configured_acquisition.py  niscope_configured_acquisition_panel.py
examples/niscope/niscope_ex_fetch_forever/: README.md  niscope_ex_fetch_forever_panel.py
examples/performance_checker/: README.md  performance_checker.py  performance_checker_panel.py
examples/sample/: README.md  sample.py  sample_2.py  sample_3.py  sample_panel.py  sample_panel_2.py  sample_panel_3.py
examples/simple_graph/: README.md  amplitude_enum.py  simple_graph.py  simple_graph_panel.py
protos/ni/panels/v1/: panel_service.proto  panel_types.proto
protos/ni/protobuf/types/: scalar.proto
protos/ni/pythonpanel/v1/: python_panel_service.proto  python_panel_types.proto
src/ni/panels/: __init__.py
src/ni/panels/v1/: __init__.py  panel_service_pb2.py  panel_service_pb2.pyi  panel_service_pb2_grpc.py  panel_service_pb2_grpc.pyi  panel_types_pb2.py  streamlit_panel_configuration_pb2.py  streamlit_panel_configuration_pb2.pyi
src/ni/protobuf/types/: scalar_pb2.py  scalar_pb2.pyi
src/ni/pythonpanel/: __init__.py
src/ni/pythonpanel/v1/: __init__.py  python_panel_service_pb2.py  python_panel_service_pb2.pyi  python_panel_service_pb2_grpc.py  python_panel_service_pb2_grpc.pyi  python_panel_types_pb2.py  python_panel_types_pb2.pyi
src/nipanel/: __init__.py  _convert.py  _converters.py  _panel.py  _panel_accessor.py  _panel_client.py  _panel_not_found_error.py  _panel_value_accessor.py  _streamlit_components.py  _streamlit_constants.py  _streamlit_panel.py  _streamlit_panel_accessor.py  _streamlit_panel_initializer.py  _streamlit_panel_value_accessor.py  _typing.py  nipanel.py
src/nipanel/controls/: _enum_selectbox.py  _flag_checkboxes.py
src/nipanel/converters/: __init__.py  builtin.py  double_analog_waveform.py  protobuf_types.py
src/nipanel/panel_refresh/: __init__.py
src/nipanel/streamlit_refresh/: __init__.py
tests/: __init__.py  conftest.py  types.py
tests/acceptance/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_convert.py  test_double_analog_waveform_converter.py  test_fake_python_panel_servicer.py  test_fake_server.py  test_nipanel.py  test_panel.py  test_panel_client.py  test_panel_value_accessor.py  test_protobuf_type_conversion.py  test_python_panel_service_stub.py  test_streamlit_panel.py  test_streamlit_panel_value_accessor.py  test_waveform_conversion.py
tests/utils/: __init__.py  _fake_panel.py  _fake_python_panel_service.py  _fake_python_panel_servicer.py  _port_panel.py
